[gd_scene load_steps=3 format=1]

[ext_resource path="res://Scripts/Win.gd" type="Script" id=1]
[ext_resource path="res://Font/PressStart2P.fnt" type="BitmapFont" id=2]

[node name="Win" type="Node"]

script/script = ExtResource( 1 )

[node name="Text1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = -24.0
margin/right = 479.0
margin/bottom = 242.0
custom_fonts/font = ExtResource( 2 )
custom_constants/line_spacing = 10
text = "Even cursed, the heroes managed to defeat the guardians of the entrance of the hall."
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Text2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = -24.0
margin/right = 479.0
margin/bottom = 242.0
custom_fonts/font = ExtResource( 2 )
custom_constants/line_spacing = 10
text = "With a dignified entrance, bursting the gates, they come across an empty hall, but find a letter on the table
\"Hi heroes, i knew about the you will coming to my cave, so I changed to a new place to prepare my plans\""
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 181.0
margin/top = 214.0
margin/right = 292.0
margin/bottom = 280.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Menu"
flat = false

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.5
one_shot = false
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


